--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.2",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "marked": "^1.0.0",
+    "method-override": "^3.0.0",
+    "mongoose": "^5.9.12",
+    "slugify": "^1.4.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
